# Robotics-Design

./: .gitignore  pyproject.toml
Clementino1.0.0/: Clementino1.0.0.ino
LCD_withSD/: LCD_withSD.ino
LCD_withSD_2/: LC_withSD.ino  pin.txt
Simulink_firstTry/: Test1.elf  Test1.hex  Test1.slx  Test1.slxc  pin.txt
arduino/: arduino.ino  pin.txt  servo_controller.h  stepper_controller.h
arduino_servo/: pin.txt
arduino_stepper/: arduino_stepper.ino  pin.txt
diagrams/: README.md
main/raspberry_pi/: README.md  main.py  pyproject.toml
main/raspberry_pi/arduino/: arduino.py  serial_communication.py  servo.py  servo_arduino.py  stepper.py  stepper_arduino.py
main/raspberry_pi/audio/: audio_player.py
main/raspberry_pi/components/: arduino.py  curve.py  ir_sensor.py  proximity_sensor.py  ring_led.py  screen.py  servo.py  speaker.py  stepper.py
main/raspberry_pi/raspberry-pi/: main.py
main/raspberry_pi/raspberry-pi/arduino/: serial_communication.py  servo.py
main/raspberry_pi/raspberry-pi/audio/: audio_player.py
main/raspberry_pi/raspberry-pi/screen/: screen.py
main/raspberry_pi/raspberry-pi/sensors/: ir_sensor.py  proximity_sensor.py
main/raspberry_pi/raspberry-pi/state_machine/: engaging.py  feedback.py  state_machine.py  voting.py
main/raspberry_pi/robot/: arm.py  eye.py  mouth.py  neck.py  robot.py  robot_side.py  side.py  sounds.py
main/raspberry_pi/sensors/: ir_sensor.py  proximity_sensor.py
main/raspberry_pi/state/: routines.py  state.py
main/raspberry_pi/state_machine/: engaging.py  feedback.py  state_machine.py  voting.py
raspberry_pi/: main.py
robotics-design/: robotics-design.py
tests/sensors/: ir_sensor.py  prox_sensor.py  pyproject.toml
(+131 files in other folders)
