[tool.poetry]
name = "sensors"
version = "0.1.0"
description = ""
authors = ["kiinami <kinami@posteo.net>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
rpi-gpio = "^0.7.1"
adafruit-circuitpython-hcsr04 = "^0.4.18"
adafruit-circuitpython-rgb-display = "^3.12.4"
pillow = "==9.5.0"
spidev = "^3.6"
numpy = "^1.26.4"
st7735 = "^1.0.0"
gpiod = "^2.1.3"
gpiodevice = "^0.0.3"
pyserial = "^3.5"
adafruit-blinka = "^8.39.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
